ARROW-1992: [C++/Python] Fix segfault when string to categorical empty string array

This closes [ARROW-1992](https://issues.apache.org/jira/browse/ARROW-1992).

Author: Licht-T <licht-t@outlook.jp>

Closes #1508 from Licht-T/fix-segfault-when-string_to_categorical-empty-string-array and squashes the following commits:

afea4be [Licht-T] BUG: Fix segfault when to_pandas the empty string array with string_to_categorical=True
f90e7b8 [Licht-T] TST: Add test for to_pandas the empty string array with string_to_categorical=True